--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "author": "yaya",
   "license": "ISC",
   "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "autoprefixer": "^9.7.4",
-    "dva": "^2.4.1",
     "eslint-import-resolver-webpack": "^0.12.1",
     "fs": "0.0.1-security",
     "less": "^3.11.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.5",
+    "promise.prototype.finally": "^3.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "yarn": "^1.22.4"
   },
@@ -55,7 +59,8 @@
     "postcss-plugin-bem": "^1.0.4",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "react-router-dom": "^5.1.2",
+    "react-hot-loader": "^4.12.21",
+    "react-router-dom": "^5.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-import-plugin": "^1.6.5",
