--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "noImplicitAny": false, // 是否默认禁用 any
         "removeComments": true, // 是否移除注释
         "importHelpers": true,
+        "strict": true, // 开启所有严格的类型检查
         "rootDir": "src",
         "types": [
             //指定引入的类型声明文件，默认是自动引入所有声明文件，一旦指定该选项，则会禁用自动引入，改为只引入指定的类型声明文件，如果指定空数组[]则不引用任何文件
