--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
     "autoprefixer": "^9.7.4",
+    "classnames": "^2.2.6",
     "eslint-import-resolver-webpack": "^0.12.1",
     "fs": "0.0.1-security",
     "less": "^3.11.1",
